--- a/jersey-impl/pom.xml
+++ b/jersey-impl/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>clientregistration</artifactId>
         <groupId>cz.kb.openbanking.clientregistration.client</groupId>
-        <version>1.0.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jersey-impl</artifactId>
