--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,14 @@
         <jersey.version>2.29.1</jersey.version>
     </properties>
 
-    <dependencyManagement>
+    <scm>
+        <connection>scm:git:git@github.com:komercka/client-registration-client.git</connection>
+        <developerConnection>scm:git:git@github.com:komercka/client-registration-client.git</developerConnection>
+        <url>https://github.com/komercka/client-registration-client</url>
+        <tag>v@{project.version}</tag>
+    </scm>
 
+    <dependencyManagement>
         <dependencies>
             <!--INTERNAL-->
             <dependency>
@@ -129,6 +135,21 @@
                 <scope>test</scope>
             </dependency>
         </dependencies>
-
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>pre-integration-test</goals>
+                    <preparationGoals>package</preparationGoals>
+                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
