--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,6 +24,14 @@
             <artifactId>jackson-annotations</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
@@ -50,21 +58,22 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <generatorName>spring</generatorName>
+                            <generatorName>jaxrs-jersey</generatorName>
                             <generateApiTests>false</generateApiTests>
                             <generateApiDocumentation>false</generateApiDocumentation>
                             <generateModelTests>false</generateModelTests>
                             <generateSupportingFiles>false</generateSupportingFiles>
                             <generateModelDocumentation>false</generateModelDocumentation>
                             <generateApis>false</generateApis>
-                            <templateDirectory>src/main/resources/openapi/templates</templateDirectory>
                             <inputSpec>api/src/main/resources/openapi/client-registration-api-v1.json</inputSpec>
                             <verbose>${openapi.debug}</verbose>
+                            <typeMappings>
+                                <typeMapping>URI=String</typeMapping>
+                            </typeMappings>
                             <configOptions>
                                 <modelPackage>cz.kb.openbanking.clientregistration.client.model.generated</modelPackage>
                                 <title>${project.name}</title>
                                 <sourceFolder>/src/main/java</sourceFolder>
-                                <java8>true</java8>
                                 <useTags>false</useTags>
                                 <interfaceOnly>false</interfaceOnly>
                                 <delegatePattern>true</delegatePattern>
